logs/yandex-checkout.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/uuid-1.30.egg-info'...
Compiling './lib/python3.5/site-packages/uuid.py'...
***   File "./lib/python3.5/site-packages/uuid.py", line 138
    if not 0 <= time_low < 1<<32L:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yandex_checkout'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/common'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/exceptions'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/models'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/models/confirmation'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/models/confirmation/request'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/models/confirmation/response'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/models/payment_data'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/models/payment_data/request'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/models/payment_data/response'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/notification'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/request'...
Listing './lib/python3.5/site-packages/yandex_checkout/domain/response'...
Listing './lib/python3.5/site-packages/yandex_checkout-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
